2005-12-01  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage: preserve environment when
	running as root. Thanks to Mike Hommey

2005-11-28  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh: run pdebuild-internal on one directory 
	and use another directory for build place.
	I don't know why but it's started to fail running since 28 Nov..?
	pdebuild internal sid fails to umount the bind-mount. -- this was
	fixed in 29 Nov run. Strange.

2005-11-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: test if /etc/shadow already exists
	before trying to change it.
	fix typo.

2005-11-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): policy-rc.d: allow x11-common to run.
	337541

2005-11-03  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test-experimental.sh:
	* testsuite/run-test-experimental.log: experimental test no longer
	works since apt with gpg checking is default, remove it.
	
	* debian/TODO: remove todo item on /etc/mtab documentation.

	* Documentation/pbuilder-doc.xml: document /etc/mtab is a 
	symlink to /proc/mounts
	spellcheck.

	* debian/control (Depends): cdebootstrap or debootstrap

	* pbuilder-createbuildenv: change inconsistent error message
	Check and report error state when debootstrap specified in DEBOOTSTRAP option
	does not exist.

2005-11-02  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update.

	* pbuilder-modules: ln -s is protected with ||true, 
	since /etc/mtab may already exist.

	* debian/TODO: update TODO.

2005-10-28  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update.

	* Documentation/pbuilder-doc.xml: Update documentation on 
	pbuilder on amd64
	document TODO file.

2005-10-26  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update

	* testsuite/run-test.sh (testbuild): --resolve-deps removed.
	debootstrap 0.3.2 runs --resolve-deps per default.

2005-10-20  Junichi Uekawa  <dancer@debian.org>
