@@ -3,8 +3,9 @@ pbuilder (0.140) UNRELEASED; urgency=low
   [Junichi Uekawa]
   * Bug fix: "pbuilder: PATH not preserved when either BUILDUSERID or
     BUILDUSERNAME isn't set", thanks to Mike Hommey (Closes: #341453).
+  * pbuilder-doc.xml: Document ccache support in FAQ (Closes: #178350).
 
- -- Junichi Uekawa <dancer@debian.org>  Thu,  1 Dec 2005 09:00:02 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Thu,  1 Dec 2005 09:06:29 +0900
 
 pbuilder (0.139) unstable; urgency=low
 
