@@ -1,5 +1,7 @@
 2005-12-01  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml: add notes on ccache+pbuilder.
+
 	* pbuilder-buildpackage: preserve environment when
 	running as root. Thanks to Mike Hommey
 
